...
    Card(
        modifier = Modifier.padding(vertical = 16.dp, horizontal = 8.dp).testTag("editDialogBox"),
        shape = RoundedCornerShape(16.dp),
    ) {
      LazyColumn(
          horizontalAlignment = Alignment.CenterHorizontally,
          modifier = Modifier.padding(8.dp).testTag("editDialogColumn")) {
            item {
              Row(
                  modifier = Modifier.fillMaxWidth().padding(8.dp),
                  horizontalArrangement = Arrangement.SpaceBetween,
                  verticalAlignment = Alignment.CenterVertically) {
                    Text(
...
                        modifier = Modifier.testTag("editDialogTitle"))
                    Icon(
                        Icons.Default.Close,
                        contentDescription = "Close dialog",
                        modifier =
                            Modifier.clickable { balanceDetailedViewModel.cancelPopUp() }
                                .testTag("editSubCategoryCancelButton"))
                  }
            }
            // The name box
            item {
              OutlinedTextField(
                  singleLine = true,
                  modifier = Modifier.padding(8.dp).testTag("editDialogName"),
                  value = nameString,
                  isError = balanceModel.errorName != null,
                  onValueChange = {
                    nameString = it
                    balanceDetailedViewModel.checkName(nameString)
                  },
...
            // The receipt selector
            item {
              var receiptExpanded by remember { mutableStateOf(false) }
              ExposedDropdownMenuBox(
                  expanded = receiptExpanded,
                  onExpandedChange = { receiptExpanded = !receiptExpanded },
                  modifier = Modifier.testTag("receiptDropdown").padding(8.dp)) {
                    OutlinedTextField(
                        isError = balanceModel.errorReceipt != null,
                        supportingText = { Text(balanceModel.errorReceipt ?: "") },
                        value = receiptName,
                        onValueChange = { balanceDetailedViewModel.checkReceipt(receiptName) },
                        label = { Text("Receipt") },
...
                        modifier =
                            Modifier.menuAnchor().clickable { receiptExpanded = !receiptExpanded })
                    ExposedDropdownMenu(
                        expanded = receiptExpanded,
                        onDismissRequest = { receiptExpanded = false }) {

                          // Adding the "No receipt" item
                          DropdownMenuItem(
                              text = { Text("No receipt") },
                              onClick = {
                                balanceDetailedViewModel.noReceiptSelected(true)
                                amountString = "" // Clear the amount
                                receiptUid = "" // Clear the receipt UID
...
            // The TVA box
            item {
              var balanceTvaExpanded by remember { mutableStateOf(false) }
              ExposedDropdownMenuBox(
                  expanded = balanceTvaExpanded,
                  onExpandedChange = { balanceTvaExpanded = !balanceTvaExpanded },
                  modifier = Modifier.testTag("categoryDropdown").padding(8.dp)) {
                    OutlinedTextField(
                        value = "$tvaString%",
                        onValueChange = {},
                        label = { Text("Tva") },
                        trailingIcon = {
                          ExposedDropdownMenuDefaults.TrailingIcon(expanded = balanceTvaExpanded)
...
                  onDateSelect = { newDate ->
                    if (newDate != null) {
                      date = newDate
                      balanceDetailedViewModel.checkDate(date)
                    }
                  },
                  modifier = Modifier.padding(8.dp).testTag("editDialogDate"),
                  isError = balanceModel.errorDate != null,
                  supportingText = { Text(balanceModel.errorDate ?: "") })
            }

            // The assignee field
            item {
              OutlinedTextField(
                  singleLine = true,
                  isError = balanceModel.errorAssignee != null,
                  modifier = Modifier.padding(8.dp).testTag("editDialogAssignee"),
                  value = assignee,
                  onValueChange = {
                    assignee = it
                    balanceDetailedViewModel.checkAssignee(assignee)
                  },
                  label = { Text("Assignee") },
...
                  horizontalArrangement = Arrangement.End,
              ) {
                if (balanceModel.editing) {
                  TextButton(
                      content = { Text("Delete", color = MaterialTheme.colorScheme.error) },
                      onClick = { balanceDetailedViewModel.deleteBalanceItem(balance.uid) },
                      modifier = Modifier.testTag("editDeleteButton"),
                  )
                }
                TextButton(
                    content = { Text("Confirm") },
                    onClick = {
                      balanceDetailedViewModel.checkAll(
...
                                date,
                                assignee,
                                mutableStatus)
                        balanceDetailedViewModel.saveEditing(newBalanceItem)
                      }
                    },
                    modifier = Modifier.testTag("editConfirmButton"),
                )
              }
            }
          }
    }
  }
...
