...
        }
      },
      properties = DialogProperties()) {
        Card(
            modifier =
                Modifier.padding(vertical = 16.dp, horizontal = 8.dp)
                    .testTag("editSubCategoryDialog"),
            shape = RoundedCornerShape(16.dp),
        ) {
          Column(
              modifier = Modifier.verticalScroll(rememberScrollState()).padding(8.dp),
              horizontalAlignment = Alignment.CenterHorizontally) {
                // Title
...
                              }
                              .testTag("editSubCategoryCancelButton"))
                }

                // Edit fields
                OutlinedTextField(
                    modifier = Modifier.testTag("editSubCategoryNameBox").padding(8.dp),
                    value = name,
                    singleLine = true,
                    onValueChange = { name = it },
                    label = { Text("Name") },
                    supportingText = {})
                OutlinedTextField(
                    modifier = Modifier.testTag("editSubCategoryYearBox").padding(8.dp),
                    value = year,
                    singleLine = true,
                    onValueChange = { year = it },
                    label = { Text("Year") },
                    supportingText = {})

...
                      when (page) {
                        AccountingPage.BALANCE -> balanceViewModel.deleteSubCategoryInBalance()
                        AccountingPage.BUDGET -> budgetViewModel.deleteSubCategoryInBudget()
                      }
                      navigationActions.back()
                    },
                    modifier = Modifier.testTag("editSubCategoryDeleteButton")) {
                      Text("Delete", color = MaterialTheme.colorScheme.error)
                    }

                // Save button
                TextButton(
                    onClick = {
...
                                name, categoryUid, year.toInt())
                        AccountingPage.BUDGET ->
                            budgetViewModel.saveSubCategoryEditingInBudget(
                                name, categoryUid, year.toInt())
                      }
                    },
                    modifier = Modifier.testTag("editSubCategorySaveButton"),
                ) {
                  Text("Save")
                }
              }
        }
      }
...
